--- a/taxon_home/templates/pageletLayouts/registered/navBar.html
+++ b/taxon_home/templates/pageletLayouts/registered/navBar.html
@@ -99,15 +99,16 @@
             {% endif %}
         </div>
         <div class="login_search">
-            <form id="search"  method="get" action="{{ SITE_URL }}search/">
+            <form id="search"  method="get" action="{{ SITE_URL }}iSearch/">
 	        	<input type="text" name="query" id="query" />
-				<input type="hidden" name="searchImages" value="true" />
-				<input type="hidden" name="searchGenomes" value="false" />
-				<input type="submit" class="search_button" value="" />   	
+				<input type="submit" class="search_button" value="" />
+				<br>
+				<input type="checkbox" name="searchImageDesc" value="true" checked/> ID
+				<input type="checkbox" name="searchImageNotes" value="true" checked/> IN
+				<input type="checkbox" name="searchGeneName" value="true" checked/> GN
+				<input type="checkbox" name="searchGeneSymbol" value="true" checked/> GS
+				<input type="checkbox" name="searchGeneID" value="true" checked/> GI
 	        </form>
-	        <div>
-	        	<a href="{{ SITE_URL }}advancedSearch/">Advanced Search</a>
-	        </div>
         </div>
     </div>
 </body>
