[MDIG-49] Added Image Notes feature. (It has some bugs and we need to fix them.)

--- a/taxon_home/templates/pageletLayouts/registered/workbench.html
+++ b/taxon_home/templates/pageletLayouts/registered/workbench.html
@@ -28,6 +28,7 @@
     <script type="text/javascript" src="{{ STATIC_URL }}js/ImagesUI/taggableUtil/NewGeneLinkDialog.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/ImagesUI/taggableUtil/DeleteGeneLinkDialog.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/ImagesUI/taggableUtil/NewTagGroupDialog.js"></script>
+	<script type="text/javascript" src="{{ STATIC_URL }}js/ImagesUI/taggableUtil/EditNotesDialog.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/ImagesUI/taggableUtil/SaveTagDialog.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/ImagesUI/taggableUtil/AddOrganismDialog.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/ImagesUI/taggableUtil/EditImageDialog.js"></script>
@@ -660,6 +661,22 @@
 
 	    LoadImage();
         {% endif %}
+
+        //
+        // Image Notes Edit
+        //
+        //$('#notes-edit-btn').on('click', function() {
+        //$('#notesEdit').on('click', function() {
+        //$('#notesEdit').on('click', function() {
+        //$('#notesEdit').click(function() {
+        //$('#notes-edit-btn').click(function() {
+            //alert('edit note dialog open');
+            //var pageBlock = new PageBlock();
+            //var siteURL = '{{ SITE_URL }}';
+            //var editNotesDialog = new EditNotesDialog(pageBlock, siteURL);
+            //editNotesDialog.show();
+        //});
+
 
 	});
 </script>
