Added open 'Recently viewed Piction' section as a default when Workbench page is loaded.

--- a/taxon_home/templates/pageletLayouts/registered/workbench.html
+++ b/taxon_home/templates/pageletLayouts/registered/workbench.html
@@ -407,6 +407,7 @@
 		});
 
 		$('.toolbar-header').collapser('collapse');
+        $('.toolbar-header:first').collapser('open');
 
 		$('#minMaxNav').on('click', function() {
 			if ($(this).hasClass('max')) {
