Stabilizing MaizeDig web site - part 1.

--- a/taxon_home/templates/pageletLayouts/public/footer.html
+++ b/taxon_home/templates/pageletLayouts/public/footer.html
@@ -25,7 +25,6 @@
 </head>
 <body>
 	<div class="footer">
-		<span>BioDIG by: <a href="http://lnkd.in/PrVcRi" target="_blank">Andrew Oberlin</a> using <a href="http://biodig.org" target="_blank">BioDIG</a></span>
-		<span><a href="http://iddo-friedberg.net/lab.html" target="_blank">Friedberg Lab, Miami University</a></span>
+		<span>MaizeDIG powered by BioDIG: <span>Friedberg Lab (Iowa State University) and MaizeGDB</span>
 	</div>
 </body>
