--- a/taxon_home/templates/pageletLayouts/public/home.html
+++ b/taxon_home/templates/pageletLayouts/public/home.html
@@ -97,16 +97,17 @@
 <div id="helpBox">
 	<div>
 		<p>
-			MyDIG – the <b>My</b>coplasma <b>D</b>atabase of <b>I</b>mages and <b>G</b>enomes contains genomes of all publicly available Mycoplasma. 
-			It also contains a growing collection of images. Some of those images are gene-tagged, i.e. regions of those images are linked to specific genes. 
-			In this way,  you can view the genotype-phenotype connections between cellular and subcellular structures in Mycoplasma, and the genes associated with them. 
-			This database is still being populated. The MyDIG database is constructed using the BioDIG set of tools for annotating linking biological image and genomic information.
+			MaizeDIG – the Maize Database of Images and Genomes, a genotypic-phenotypic database, for maize based on BioDIG.
+			MaizeDIG and tool set have been enhanced to handle multiple reference genomes and has been seamlessly integrated with the MaizeGDB Genome Browser to make custom tracks showing mutant phenotypes within their genomic context.
+			It allows for custom tagging of images to highlight regions related to the phenotypes.
+			This is accomplished through an interface allowing users to create links from images to genomic coordinates and to curate and search images by gene model ID, gene symbol, and gene name.
 		</p>
 	</div>
 	<div>
-		Feedback is welcome. Please email Andrew Oberlin <a href="mailto:oberliat@miamioh.edu?Subject=BioDIG">oberliat@miamioh.edu</a> with any comments you may have. 
+		Feedback is welcome. Please email [email_address_for_feedback] with any comment you man have.
 	</div>
 	<br />
+    <!--
 	<div> 
 		<div>To get started:</div>
 		<br />
@@ -121,6 +122,7 @@
 		<div style="padding-left: 10px;"><img class="organismInfoImg" src="{{ STATIC_URL }}images/imageIcon.png" />: Species / strain has images</div>
 		<div style="padding-left: 10px;"><img class="organismInfoImg" style="height: 25px; margin-left: -5px; vertical-align: bottom;" src="{{ STATIC_URL }}images/tag.png" />: Species / strain's images are tagged (visually linked to genes).</div>
 	</div>
+	-->
 </div>
 <style>
 	#selectable .ui-selecting { background: paleblue; cursor: pointer;}
