[MDIG-75] Showing image_id on Workbench - 1. showing in the address bar of browser

--- a/taxon_home/templates/pageletLayouts/registered/workbench.html
+++ b/taxon_home/templates/pageletLayouts/registered/workbench.html
@@ -513,6 +513,9 @@
 			var taggingDataClient = new TaggingDataClient();
 			var getImageClient = new ImageClient();
 
+			// update current URL in the address bar of browser
+            window.history.pushState('MaizeDIG', 'MaizeDIG Administration', '?dliid=' + key);
+
 			getImageClient.call(key, function(data, textStatus, jqXHR) {
 				taggingDataClient.call(key, function(tagGroups) {
 					var $workArea = $('#work-area').empty();
