--- a/taxon_home/templates/pageletLayouts/public/iSearch.html
+++ b/taxon_home/templates/pageletLayouts/public/iSearch.html
@@ -63,6 +63,7 @@
 						'limit' : {{ limit }},
 						'totalImages' : totalImages,
 						'imagesPerRow' : {{ imagesPerRow }},
+						'user' : '{{ user }}',
 						'query' : '{{ query }}',
 						'iSearchID' : iSearchID
 					});
