MaizeDIG review update -- Added feature to download image data.

--- a/taxon_home/templates/pageletLayouts/admin/imageEditor.html
+++ b/taxon_home/templates/pageletLayouts/admin/imageEditor.html
@@ -5,8 +5,12 @@
     <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/menu.css"></link>
     <script type="text/javascript" src="{{ STATIC_URL }}js/downloadify/swfobject.js"></script>
 	<script type="text/javascript" src="{{ STATIC_URL }}js/downloadify/downloadify.min.js"></script>
+    <!--
     <script type="text/javascript" src="{{ STATIC_URL }}js/JSZip/jszip.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/JSZip/jszip-deflate.js"></script>
+    -->
+    <script type="text/javascript" src="{{ STATIC_URL }}js/JSZip/jszip3/jszip.js"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}js/JSZip/jszip3/FileSaver.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/kineticjs/kinetic-v3.10.0.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/ImagesUI/zoomable.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/ImagesUI/tagViewingUI/TaggableUtil.js"></script>
