--- a/taxon_home/templates/pageletLayouts/registered/workbench.html
+++ b/taxon_home/templates/pageletLayouts/registered/workbench.html
@@ -6,8 +6,12 @@
     <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/menu.css"></link>
     <script type="text/javascript" src="{{ STATIC_URL }}js/downloadify/swfobject.js"></script>
 	<script type="text/javascript" src="{{ STATIC_URL }}js/downloadify/downloadify.min.js"></script>
+    <!--
     <script type="text/javascript" src="{{ STATIC_URL }}js/JSZip/jszip.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/JSZip/jszip-deflate.js"></script>
+    -->
+    <script type="text/javascript" src="{{ STATIC_URL }}js/JSZip/jszip3/jszip.js"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}js/JSZip/jszip3/FileSaver.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/kineticjs/kinetic-v3.10.0.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/ImagesUI/zoomable.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/ImagesUI/tagViewingUI/TaggableUtil.js"></script>
@@ -29,6 +33,7 @@
     <script type="text/javascript" src="{{ STATIC_URL }}js/ImagesUI/taggableUtil/DeleteGeneLinkDialog.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/ImagesUI/taggableUtil/NewTagGroupDialog.js"></script>
 	<script type="text/javascript" src="{{ STATIC_URL }}js/ImagesUI/taggableUtil/EditNotesDialog.js"></script>
+	<script type="text/javascript" src="{{ STATIC_URL }}js/ImagesUI/taggableUtil/EditQtlsDialog.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/ImagesUI/taggableUtil/SaveTagDialog.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/ImagesUI/taggableUtil/AddOrganismDialog.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/ImagesUI/taggableUtil/EditImageDialog.js"></script>
