--- a/taxon_home/templates/applicationLayouts/public/search.html
+++ b/taxon_home/templates/applicationLayouts/public/search.html
@@ -1,7 +1,7 @@
 {% load template_tags %}
 <html>
 	<head>
-		<title>BioDIG {{ title }}</title>
+		<title>MaizeDIG {{ title }}</title>
 		<link rel="stylesheet" href="{{ STATIC_URL }}css/layout.css" type="text/css" />
 		<link rel="stylesheet" href="{{ STATIC_URL }}css/search.css" type="text/css" />
 		<script type="text/javascript" src="{{ STATIC_URL }}js/jquery/1.7.2/jquery.min.js"></script>
